--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
     </p>
     <form action="/html/tags/html_form_tag_action.cfm" method="post">
       <div>
-        <textarea name="comments" style="font-family: sans-serif;font-size: 1.2em; border:1px solid #7f2cb7">
-          Type a comment here!
+        <textarea name="comments" style="font-family: sans-serif;font-size: 1.2em; border:10px dotted solid #7f2cb7">
+          Comment here!
         </textarea>
       </div>
       <input type="submit" name="Submit">
