--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
 
 
 
@@ -56,7 +56,7 @@
       </div>
   </div>
 
- <div class="w3-center">
+ <div class="w3-center w3-padding-64">
     <h1>
       WPI class of 2020
     </h1>
@@ -73,13 +73,31 @@
           <span class="w3-xxlarge w3-text-white w3-wide">Experience</span>
       </div>
   </div>
-<div class="w3-center">
-    <p>CSS: some</p>
-    <p>Java: some</p>
-    <p>JavaScript: some</p>
-    <p>Ruby: none </p>
-    <p>Python: some</p>
-    <p>unit testing: some</p>
+<div class="w3-center container w3-padding-64">
+    <p>CSS</p>
+    <div class="progress">
+        <div class="progress-bar bg-secondary" style="width:70%">70%</div>
+    </div>
+    <p>Java</p>
+    <div class="progress border">
+        <div class="progress-bar bg-secondary" style="width:80%">80%</div>
+    </div>
+    <p>JavaScript</p>
+    <div class="progress border">
+        <div class="progress-bar bg-secondary" style="width:50%">50%</div>
+    </div>
+    <p>Ruby</p>
+    <div class="progress border">
+        <div class="progress-bar bg-secondary" style="width:5%">5%</div>
+    </div>
+    <p>Python</p>
+    <div class="progress border">
+        <div class="progress-bar bg-secondary" style="width:30%">30%</div>
+    </div>
+    <p>unit testing</p>
+    <div class="progress border">
+        <div class="progress-bar bg-secondary" style="width:15%">15%</div>
+    </div>
 
 </div>
   <div class="bgimg-c w3-display-container">
@@ -87,7 +105,7 @@
           <span class="w3-xxlarge w3-text-white w3-wide">Courses taken</span>
       </div>
   </div>
- <div class="w3-center">
+ <div class="w3-center w3-padding-64">
     <ul>
         <p>CS1101 - Introduction to Program Design</p>
         <p>CS2102 - Object-Oriented Design Concepts</p>
