added some fun facts

--- a/index.html
+++ b/index.html
@@ -6,14 +6,19 @@
   <body>
     <h1>Information about Erika Snow</h1>
     <p>
-      Class of 2019
-    </p>
-    <p>
+      Class of 2019 <br />
       Robotics Engineering and Computer Science
     </p>
     <p>
-      Classes I've taken:
-      Software Engineering, Operating Systems, Algorithms, Foundations of Computer Science, Theory of Computation, etc.
+      Classes I've taken: <br />
+      Software Engineering, Operating Systems, Algorithms, Foundations of Computer Science, 
+      Theory of Computation, etc.
+    </p>
+    <p>
+      Fun Facts: <br />
+      I've earned 3 blackbelts in different forms of martial arts, 
+      and I was the first female on my high school's wrestling team. I spent the summer in Colorado for 
+      an internship, and I climbed my first 14'er while I was there. I wanted to die.
     </p>
 
     <h2>Experience</h2>
@@ -28,12 +33,12 @@
       <li>Ruby - none</li>
       <li>Python - none</li>
     </ul>
-    
+
     <p>
       Internships:
     </p>
     <ul>
-      <li>Compassion International</li>
+      <li>Software Developer at Compassion International</li>
     </ul>
   </body>
 </html>
