--- a/index.html
+++ b/index.html
@@ -5,12 +5,52 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <img src="headshot.jpg" alt="Profile Picture">
-    <h1>Peter Maida</h1>
-    <h2>WPI Class of 2020</h2>
-    <h2>Computer Science</h2>
 
-    <p> About me... </p>
+      <div class="about-me">
+           <h1>Peter Maida</h1>
+           <h2>WPI Class of 2020</h2>
+           <h2>Computer Science</h2>
+           <img src="headshot.jpg" alt="Profile Picture">
+
+           <div class="tab">
+               <a href="#t1"><h3>About Me</h3></a>
+               <a href="#t2"><h3>Course Experience</h3></a>
+               <a href="#t3"><h3>Webdev Experience</h3></a>
+           </div>
+
+           <div class="info" id="t1">
+               <p>
+                   In my free time I enjoy playing videogames, hanging out with friends, and going to the gym.
+               </p>
+           </div>
+
+           <div class="info" id="t2">
+               <ul>
+                 <li><a href="https://www.wpi.edu/academics/calendar-courses/course-descriptions/computer-science#cs_3733">CS3733 - Software Engineering</a></li>
+                 <li><a href="https://www.wpi.edu/academics/calendar-courses/course-descriptions/computer-science#cs_3516">CS3516 - Computer Networks</a></li>
+                 <li><a href="https://www.wpi.edu/academics/calendar-courses/course-descriptions/computer-science#cs_3013">CS3013 - Operating Systems</a></li>
+                 <li><a href="https://www.wpi.edu/academics/calendar-courses/course-descriptions/computer-science#cs_3133">CS3133 - Foundations of Computer Science</a></li>
+                 <li><a href="https://www.wpi.edu/academics/calendar-courses/course-descriptions/computer-science#cs_3043">CS3043 - Social Implications</a></li>
+                 <li><a href="https://www.wpi.edu/academics/calendar-courses/course-descriptions/computer-science#cs_2223">CS2223 - Algorithms</a></li>
+                 <li><a href="https://www.wpi.edu/academics/calendar-courses/course-descriptions/computer-science#cs_2303">CS2303 - Systems Programming Concepts</a></li>
+               </ul>
+           </div>
+
+           <div class="info" id="t3">
+               <ul>
+                 <li>HTML - none</li>
+                 <li>CSS - some</li>
+                 <li>Java - a lot</li>
+                 <li>JavaScript - none</li>
+                 <li>Ruby - none</li>
+                 <li>Python - a lot</li>
+                 <li>unit testing - some</li>
+               </ul>
+           </div>
+
+       </div>
+<!--
+    <p>In my free time I enjoy playing videogames, hanging out with friends, and going to the gym.</p>
 
     <h2>Course Experience</h2>
     <ul>
@@ -33,5 +73,6 @@
       <li>Python - a lot</li>
       <li>unit testing - some</li>
     </ul>
+-->
   </body>
 </html>
