--- a/index.html
+++ b/index.html
@@ -10,11 +10,6 @@
       Robotics Engineering and Computer Science
     </p>
     <p>
-      Classes I've taken: <br />
-      Software Engineering, Operating Systems, Algorithms, Foundations of Computer Science, 
-      Theory of Computation, etc.
-    </p>
-    <p>
       Fun Facts: <br />
       I've earned 3 blackbelts in different forms of martial arts, 
       and I was the first female on my high school's wrestling team. I spent the summer in Colorado for 
@@ -22,6 +17,11 @@
     </p>
 
     <h2>Experience</h2>
+    <p>
+      Classes I've taken: <br />
+      Software Engineering, Operating Systems, Algorithms, Foundations of Computer Science, 
+      Theory of Computation, etc.
+    </p>
     <p>
       Working experience: 
     </p>
@@ -32,6 +32,7 @@
       <li>JavaScript - barely any, but enough to know not having types bothers me SO MUCH</li>
       <li>Ruby - none</li>
       <li>Python - none</li>
+      <li>Unit Testing - a lot</li>
     </ul>
 
     <p>
