--- a/index.html
+++ b/index.html
@@ -4,24 +4,34 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <h1>Information about [Your name here]</h1>
+    <h1>Information about Eoin O'Connell</h1>
     <p>
-      [Self introduction]
+      I am in my final year at Worcester Polytechnic Institute, and I'm definitely interested in genetics, DNA regulation, and biovisualization.
+      I'm a pianist for fun, and I enjoy learning about history maybe a little too much. I see myself working with genetic data and statistics 
+      visualization in the future.
     </p>
     <p>
-      [Major and other information]
+      Bioinformatics and Computational Biology Major
     </p>
     <p>
-      [Other things]
+      I have taken CS2102, CS3431, and CS3733 at WPI.
     </p>
 
     <h2>Experience</h2>
     <p>
-      Working experience
+      I have had two coops in bioinformatics related fields, both of which utilized Python and 
+      command line inputs.
+      
+      The following is my experience with several technologies and methods:
     </p>
     <ul>
-      <li>IBM/Rational</li>
-      <li>WPI</li>
+      <li>HTML: some</li>
+      <li>CSS: some</li>
+      <li>Java: a lot</li>
+      <li>JavaScript: none</li>
+      <li>Ruby: none</li>
+      <li>Python: a lot</li>
+      <li>unit testing: none</li>
     </ul>
   </body>
 </html>
