add bootstrap and pic

--- a/index.html
+++ b/index.html
@@ -2,22 +2,26 @@
   <head>
     <title>CS4241 Assignment 1</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="bootstrap.min.css"/>
   </head>
   <body>
     <div>
-      <h1>Information about Madeline Burke</h1>
+      <h1 style="text-align:center;">Information about Madeline Burke</h1>
     </div>
-    <p>
+    <br>
+    <div>
+        <img src="prof%20pic.jpg" class="img-rounded">
+      <p>
       Hi, my name is Madeline Burke and I am a Senior at Worcester Polytechnic Institute (WPI).
     </p>
     <p>
       I am majoring in Computer Science and minoring in Data Science and Business.
     </p>
+    </div>
     <p>
       Classes that I have taken at WPI include:
       <ul>
-        <li>CS1101: Intro to Program Design</li>
+        <li><b>CS1101:</b> Intro to Program Design</li>
         <li>CS2022: Descrete Mathematics</li>
         <li>CS2102: Object-Oriented Design</li>
         <li>CS2223: Algorithms</li>
