testing inline style

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       Robotics Engineering and Computer Science
     </p>
     <p>
-      Fun Facts: <br />
+      <b>Fun Facts:</b><br />
       I've earned 3 blackbelts in different forms of martial arts, 
       and I was the first female on my high school's wrestling team. I spent the summer in Colorado for 
       an internship, and I climbed my first 14'er while I was there. I wanted to die.
@@ -19,12 +19,12 @@
 
     <h2>Experience</h2>
     <p>
-      Classes I've taken: <br />
+      <b>Classes I've taken:</b><br />
       Software Engineering, Operating Systems, Algorithms, Foundations of Computer Science, 
       Theory of Computation, etc.
     </p>
     <p>
-      Working experience: 
+      <b>Working experience:</b>
     </p>
     <ul>
       <li>HTML - none</li>
@@ -37,7 +37,7 @@
     </ul>
 
     <p>
-      Internships:
+      <b>Internships:</b>
     </p>
     <ul>
       <li>Software Developer at Compassion International</li>
