Edited header of page

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <body style="background-color:ivory;">
       <center>
         <font face="georgia" color="rebeccapurple">
-          <h1>Information about Andrew DeRusha</h1>
-          <h3>Hi everyone, I'm Andrew. I'm a junior CS major.</h3>
+          <h1><i>Andrew DeRusha</i></h1>
+          <h2>Junior CS major, Class of 2020</h2>
         </font>
         <font face="verdana">
           <p>
