--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
   <body>
     <h1>Information about Erika Snow</h1>
     <p>
-      Class of 2019 <br />
-      Robotics Engineering and Computer Science
+      I'm a senior (Class of 2019) studying Robotics Engineering and Computer Science. I'm from Foxborough
+      MA, but despite living where the Patriot's play, I couldn't care less about football. I have an older
+      brother and two puppies back home, who I love to death (the dogs, not my brother; but I guess he's ok 
+      too).
     </p>
+    <img src="puppies.jpeg" alt="Charlie and Spencer">
     <p>
       <b>Fun Facts:</b><br />
       I've earned 3 blackbelts in different forms of martial arts, 
