new bootstrap file

--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
   <head>
     <title>CS4241 Assignment 1</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="bootstrap.min.css"/>
+    <link rel="stylesheet" type="text/css" href="bootstrap.css">
   </head>
   <body>
     <div>
-      <h1 style="text-align:center;">Information about Madeline Burke</h1>
+      <h1 style="text-align:center;">All about Madeline Burke</h1>
     </div>
     <br>
     <div>
-        <img src="prof%20pic.jpg" class="img-rounded">
+        <img src="prof.jpg" class="img-circle" style=width:50px;height:75px;>
       <p>
       Hi, my name is Madeline Burke and I am a Senior at Worcester Polytechnic Institute (WPI).
     </p>
