Changed line height go headers

--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
   </head>
     <body style="background-color:ivory;">
       <center>
+        <p line-height: 0.8;>
         <font face="georgia" color="rebeccapurple">
           <h1><i>Andrew DeRusha</i></h1>
           <h2>Junior CS major, Class of 2020</h2>
         </font>
+        </p>
         <font face="verdana">
           <p>
             Although I'm a CS major, I do have a pation for drawing, graphical design and visual media.
