--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       brother and two puppies back home, who I love to death (the dogs, not my brother; but I guess he's ok 
       too).
     </p>
-    <img src="puppies.jpeg" alt="Charlie and Spencer">
+    <img src="puppies.jpeg" alt="Charlie and Spencer" style="width:500px;height:600px;">
     <p>
       <b>Fun Facts:</b><br />
       I've earned 3 blackbelts in different forms of martial arts, 
