--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
     <title>CS4241 Assignment 1</title>
     <meta charset="utf-8">
   </head>
+  
+  p.small {
+    line-height: 0.8;
+  }
+  
     <body style="background-color:ivory;">
       <center>
-        <p line-height: 0.8;>
+        <p class="small">
         <font face="georgia" color="rebeccapurple">
           <h1><i>Andrew DeRusha</i></h1>
           <h2>Junior CS major, Class of 2020</h2>
