Created class for line spacing

--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <html lang="en"> 
-  
-  p.small {
-    line-height: 0.8;
-  }
-  
   <head>
     <title>CS4241 Assignment 1</title>
     <meta charset="utf-8">
   </head>
+  
+  <style>
+      p.small {
+        line-height: 0.8;
+      }
+  </style
+    
     <body style="background-color:ivory;">
       <center>
         <p class="small">
