Initial changes to text

--- a/index.html
+++ b/index.html
@@ -4,24 +4,27 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <h1>Information about [Your name here]</h1>
+    <h1>Information about Thomas Schweich</h1>
     <p>
-      [Self introduction]
+      I am a Junior at Worcester Polytechnic Institute with a passion for history and the progress of technology over time.
     </p>
     <p>
-      [Major and other information]
-    </p>
-    <p>
-      [Other things]
+      I am a Computer Science major with a Physics minor.
     </p>
 
     <h2>Experience</h2>
     <p>
-      Working experience
+      Computer Science Courses
     </p>
     <ul>
-      <li>IBM/Rational</li>
-      <li>WPI</li>
+      <li>Accellerated Introduction to Program Design</li>
+      <li>Accelerated Introduction to Object Oriented Design</li>
+      <li>Independent study: Context-aware Event Stream Analysis</li>
+      <li>Discrete Mathematics</li>
+      <li>Systems Programming</li>
+      <li>Foundations of Computer Science</li>
+      <li>Introduction to Machine Organization &amp; Assembly Language</li>
+      <li>Human-Computer Interaction</li>
     </ul>
   </body>
 </html>
