Created class for header to decrease line space

--- a/index.html
+++ b/index.html
@@ -5,19 +5,17 @@
   </head>
   
   <style>
-      p.small {
+      h1.small {
         line-height: 0.8;
       }
-  </style
+  </style>
     
     <body style="background-color:ivory;">
       <center>
-        <p class="small">
         <font face="georgia" color="rebeccapurple">
-          <h1><i>Andrew DeRusha</i></h1>
+          <h1 class="small"><i>Andrew DeRusha</i></h1>
           <h2>Junior CS major, Class of 2020</h2>
         </font>
-        </p>
         <font face="verdana">
           <p>
             Although I'm a CS major, I do have a pation for drawing, graphical design and visual media.
