Created class for decreasing line space of header two

--- a/index.html
+++ b/index.html
@@ -8,13 +8,16 @@
       h1.small {
         line-height: 0.8;
       }
+      h2.small {
+        line-height: 0.8;
+      }
   </style>
     
     <body style="background-color:ivory;">
       <center>
         <font face="georgia" color="rebeccapurple">
           <h1 class="small"><i>Andrew DeRusha</i></h1>
-          <h2>Junior CS major, Class of 2020</h2>
+          <h2 class="small">Junior CS major, Class of 2020</h2>
         </font>
         <font face="verdana">
           <p>
