--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       brother and two puppies back home, who I love to death (the dogs, not my brother; but I guess he's ok 
       too).
     </p>
-    <img src="puppies.jpeg" alt="Charlie and Spencer" style="width:600px;height:400px;align-content:center;" class="center">
+    <img src="puppies.jpeg" alt="Charlie and Spencer" style="width:50%;height:50%;" class="center">
     <p>
       <b>Fun Facts:</b><br />
       I've earned 3 blackbelts in different forms of martial arts, 
