Edited top padding of website an heading space

--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
   
   <style>
       h1.small {
-        line-height: 0.8;
+        line-height: 0.4;
       }
       h2.small {
-        line-height: 0.8;
+        line-height: 0.4;
       }
   </style>
     
     <body style="background-color:ivory;">
-      <center>
+      <center style="padding-top: .5">
         <font face="georgia" color="rebeccapurple">
           <h1 class="small"><i>Andrew DeRusha</i></h1>
           <h2 class="small">Junior CS major, Class of 2020</h2>
