--- a/index.html
+++ b/index.html
@@ -11,11 +11,16 @@
     <script src="https://unpkg.com/leaflet@1.3.4/dist/leaflet.js"
             integrity="sha512-nMMmRyTVoLYqjP9hrbed9S+FzjZHW5gY1TWCHA5ckwXZBadntCNs8kEqAWdrb9O7rxbCaA4lKTIWjDXZxflOcA=="
             crossorigin=""></script>
+
+    <!-- fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans:700|Poppins" rel="stylesheet">
 </head>
 <body>
 <h1 id="name">Lucas Sacherer</h1>
-<h3 id="degree">BS in Computer Science</h3>
-<h3 id="year">WPI Class of 2019</h3>
+<div id="header">
+    <p>B.S. in Computer Science</p>
+    <p>WPI Class of 2019</p>
+</div>
 <div id="about_me">
     <h2>About Me</h2>
     <p>
@@ -31,11 +36,11 @@
 </div>
 
 <div id="classes">
-    <h2>Classes</h2>
+    <h2>Courses</h2>
     <table>
         <tr>
-            <th>Class #</th>
-            <th>Class Name</th>
+            <th>Course #</th>
+            <th>Course Name</th>
         </tr>
         <tr>
             <td>CS 1102</td>
@@ -105,7 +110,7 @@
                 </ul>
             </td>
             <td>
-                <p>Working experience:</p>
+                <p>Working Experience:</p>
                 <ul>
                     <li>Research Assistant, WPI </li>
                     <li>Software Engineer Intern, Worldpay</li>
@@ -117,14 +122,21 @@
 
 <div id="lived">
     <h2>Places I've Lived</h2>
-    <ul>
-        <li><input type="button" id="strasbourg" value="Strasbourg, France"></li>
-        <li><input type="button" id="egham" value="Egham, UK"></li>
-        <li><input type="button" id="holtzheim" value="Holtzheim, France"></li>
-        <li><input type="button" id="highland_park" value="Highland Park, US"></li>
-        <li><input type="button" id="lake_bluff" value="Lake Bluff, US"></li>
-        <li><input type="button" id="worcester" value="Worcester, US"></li>
-    </ul>
+    <table>
+        <tr>
+            <td><input type="button" id="highland_park" value="Highland Park, US"></td>
+            <td><input type="button" id="strasbourg" value="Strasbourg, France"></td>
+        </tr>
+        <tr>
+            <td><input type="button" id="lake_bluff" value="Lake Bluff, US"></td>
+            <td><input type="button" id="egham" value="Egham, UK"></td>
+        </tr>
+        <tr>
+            <td><input type="button" id="worcester" value="Worcester, US"></td>
+            <td><input type="button" id="holtzheim" value="Holtzheim, France"></td>
+        </tr>
+    </table>
+    <p>Click to view on map</p>
 </div>
 <div id="mapid"></div>
 
