--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
       h2.small {
         line-height: 0.4;
       }
+      p.small {
+        line-height: 0.4;
+      }
+      ul.small {
+        line-height: 0.4;
+      }
   </style>
     
     <body style="background-color:ivory;">
@@ -39,7 +45,7 @@
         </font>
       </center>
       <font face="verdana">
-        <p style="margin-left:5em; margin-right: 5em">
+        <p class="small"; style="margin-left:5em; margin-right: 5em">
           My work experience involves a summer internship working with the company <a href="https://www.jackpinetech.com">Jackpine Technologies</a>. While there, I was primarily working with Java, but they were the ones who initially exposed me to HTML, CSS and Ruby. 
         </p>
         <font face="georgia" color="rebeccapurple">
@@ -47,7 +53,7 @@
             Related Courses
           </h2>
         </font>
-        <ul style="margin-left:4em; margin-right: 4em">
+        <ul class="small"; style="margin-left:4em; margin-right: 4em">
           <li>Accelerated Introduction to Program Design</li>          
           <li>Object-Oriented Design Concepts</li>
           <li>Systems Programming Concepts</li>
