--- a/index.html
+++ b/index.html
@@ -1,18 +1,50 @@
 <html lang="en">
   <head>
+
     <title>CS4241 Assignment 1</title>
     <meta charset="utf-8">
+
+    <style>
+    body{
+      background-color: #434c5b;
+      color: #ffffff;
+      font-family: "Calibri";
+    }
+
+    table, th, td {
+    border: 1px solid white;
+    border-collapse: collapse;
+    width: 30%;
+    margin-left: 20px;
+    }
+    </style>
   </head>
   <body>
-    <h1>Information about [Your name here]</h1>
+    <h1>Information about Matt Fortmeyer</h1>
     <p>
-      [Self introduction]
+      Hi! My name is Matt Fortmeyer and I am a Senior at WPI
     </p>
     <p>
-      [Major and other information]
+      I am currently majoring in Computer Science (CS), and I have a minor in IMGD
     </p>
     <p>
-      [Other things]
+      I have taken the following CS classes at WPI:
+      <ul>
+        <li>CS1101: Intro to Program Design</li>
+        <li>CS2102: Object-Oriented Design Concepts</li>
+        <li>CS2303: Systems Programming Concepts</li>
+        <li>CS2011: Machine Organization and Assembly</li>
+        <li>CS2022: Discrete Mathematics</li>
+        <li>CS2223: Algorithms</li>
+        <li>CS3041: Human-Computer Interaction</li>
+        <li>CS3133: Foundations of Computer Science</li>
+        <li>CS3733: Software Engineering</li>
+        <li>CS3013: Operating Systems</li>
+        <li>CS4233: Object-Oriented Analysis and Design</li> 
+        <li>CS4341: Intro to Artificiall Intelligence</li>
+        <li>CS4518: Mobile and Ubiqitous Computing</li>
+        <li>IMGD4100: AI for Interactive Media and Games</li>
+      </ul>
     </p>
 
     <h2>Experience</h2>
@@ -20,8 +52,41 @@
       Working experience
     </p>
     <ul>
-      <li>IBM/Rational</li>
-      <li>WPI</li>
+      <li>WPI: SA for several CS classes</li>
     </ul>
+    <p>
+      Technology Experience
+    </p>
+    <table>
+      <tr>
+        <td>HTML</td>
+        <td>A little</td>
+      </tr>
+      <tr>
+        <td>CSS</td>
+        <td>A little</td>
+      </tr>
+      <tr>
+        <td>Java</td>
+        <td>A lot</td>
+      </tr>
+
+      <tr>
+        <td>JavaScript</td>
+        <td>Very little</td>
+      </tr>
+      <tr>
+        <td>Ruby</td>
+        <td>None</td>
+      </tr>
+      <tr>
+        <td>Python</td>
+        <td>Some</td>
+      </tr>
+      <tr>
+        <td>Unit Testing</td>
+        <td>Some</td>
+      </tr>
+    </table>
   </body>
 </html>
