removed p and ul classes

--- a/index.html
+++ b/index.html
@@ -11,12 +11,6 @@
       h2.small {
         line-height: 0.4;
       }
-      p.small {
-        line-height: 0.4;
-      }
-      ul.small {
-        line-height: 0.4;
-      }
   </style>
     
     <body style="background-color:ivory;">
@@ -41,19 +35,19 @@
         </font>
 
         <font face="georgia" color="rebeccapurple">
-          <h2>Experience</h2>
+          <h2 class="small">Experience</h2>
         </font>
       </center>
       <font face="verdana">
-        <p class="small"; style="margin-left:5em; margin-right: 5em">
+        <p style="margin-left:5em; margin-right: 5em">
           My work experience involves a summer internship working with the company <a href="https://www.jackpinetech.com">Jackpine Technologies</a>. While there, I was primarily working with Java, but they were the ones who initially exposed me to HTML, CSS and Ruby. 
         </p>
         <font face="georgia" color="rebeccapurple">
-          <h2 style="margin-left:5em; margin-right: 5em">
+          <h2 class="small; "style="margin-left:5em; margin-right: 5em">
             Related Courses
           </h2>
         </font>
-        <ul class="small"; style="margin-left:4em; margin-right: 4em">
+        <ul style="margin-left:4em; margin-right: 4em">
           <li>Accelerated Introduction to Program Design</li>          
           <li>Object-Oriented Design Concepts</li>
           <li>Systems Programming Concepts</li>
