Adjusted font color and margin width.

--- a/index.html
+++ b/index.html
@@ -2,26 +2,29 @@
   <head>
     <title>CS4241 Assignment 1</title>
     <style>
+    body {
+          background-color: whitesmoke;
+         }
     h1   {
-          color: steelblue;
+          color: darkred;
           font-family: verdana;
           font-size: 300%;
           text-align: center;
          }
     h2   {
-          color: steelblue;
+          color: darkred;
           font-family: verdana;
           font-size: 200%;
           text-align: center;
          }
     h3   {
-          color: steelblue;
+          color: darkred;
           font-family: verdana;
           font-size: 130%;
           text-align: center;
          }
     h4   {
-          color: steelblue;
+          color: black;
           font-family: verdana;
           font-size: 100%;
           text-align: left;
@@ -31,10 +34,10 @@
     p    {color: black;}
 
     .wrapper {
-        max-width: calc(800px - (30px * 2));
+        max-width: 800px;
         margin-right: auto;
         margin-left: auto;
-        padding: 10px;
+        padding: 5px;
 }
 
     .profilepic {
@@ -53,12 +56,14 @@
     <p>
     <img class="profilepic" src="profilepic.jpg">
     </p>
+    <p>
     <em>
     <h1>Trevor Weiler</h1>
     <h2>WPI Class of 2020</h2>
     <h3>Computer Science Major / Interactive Media and Game Development Minor</h3>
     </em>
     <h4>Experience</h4>
+    </p>
     <p>
       Previous Computer Science Courses I Have Taken at WPI
     </p>
