Adjusted alignment and color. Presentable.

--- a/index.html
+++ b/index.html
@@ -6,25 +6,27 @@
   </head>
   <body>
 
-      <div class="about-me">
-           <h1>Peter Maida</h1>
-           <h2>WPI Class of 2020</h2>
-           <h2>Computer Science</h2>
-           <img src="headshot.jpg" alt="Profile Picture">
+      <div class="page">
+          <div class="overview">
+              <h1>Peter Maida</h1>
+              <h2>WPI Class of 2020</h2>
+              <h2>Computer Science</h2>
+              <img src="headshot.jpg" alt="Profile Picture">
+          </div>
 
            <div class="tab">
-               <a href="#t1"><h3>About Me</h3></a>
-               <a href="#t2"><h3>Course Experience</h3></a>
-               <a href="#t3"><h3>Webdev Experience</h3></a>
+               <a href="#about-me"><h3>About Me</h3></a>
+               <a href="#course-experience"><h3>Course Experience</h3></a>
+               <a href="#webdev-experience"><h3>Webdev Experience</h3></a>
            </div>
 
-           <div class="info" id="t1">
+           <div class="info" id="about-me">
                <p>
                    In my free time I enjoy playing videogames, hanging out with friends, and going to the gym.
                </p>
            </div>
 
-           <div class="info" id="t2">
+           <div class="info" id="course-experience">
                <ul>
                  <li><a href="https://www.wpi.edu/academics/calendar-courses/course-descriptions/computer-science#cs_3733">CS3733 - Software Engineering</a></li>
                  <li><a href="https://www.wpi.edu/academics/calendar-courses/course-descriptions/computer-science#cs_3516">CS3516 - Computer Networks</a></li>
@@ -36,7 +38,7 @@
                </ul>
            </div>
 
-           <div class="info" id="t3">
+           <div class="info" id="webdev-experience">
                <ul>
                  <li>HTML - none</li>
                  <li>CSS - some</li>
