Add a line brake before experience

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         line-height: 0.4;
       }
       h2.small {
-        line-height: 0.4;
+        line-height: 0.2;
       }
   </style>
     
@@ -30,7 +30,7 @@
 
           <p style="margin-left:5em; margin-right: 5em">
             I've had coding experience with Java, Python, unit testing, HTML, CSS and Ruby, but HTML, CSS and Ruby are still relatively new to me.
-            I've never code in Javascript, so I'm looking forward to that!
+            I've never code in Javascript, so I'm looking forward to that!<br>
           </p>
         </font>
 
