--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
 
           <p style="margin-left:5em; margin-right: 5em">
             I've had coding experience with Java, Python, unit testing, HTML, CSS and Ruby, but HTML, CSS and Ruby are still relatively new to me.
-            I've never code in Javascript, so I'm looking forward to that!<br>
+            I've never code in Javascript, so I'm looking forward to that!
           </p>
+          <br>
         </font>
 
         <font face="georgia" color="rebeccapurple">
