--- a/index.html
+++ b/index.html
@@ -5,41 +5,56 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="CSS/style.css">
   <title>CS4241 Assignment 1</title>
-    <meta charset="utf-8">
 </head>
 <style>
-table {
-    font-family: arial, sans-serif;
-    border-collapse: collapse;
-    width: 100%;
-}
-
-td, th {
-    border: 1px solid #dddddd;
-    text-align: left;
-    padding: 8px;
-}
-
-tr:nth-child(even) {
-    background-color: #dddddd;
-}
 </style>
   <body>
     <h1>World Of Sam Coache</h1><br>
     <ul class="nav nav-tabs">
       <li class="active"><a data-toggle="tab" href="#home">About Me</a></li>
-      <li><a data-toggle="tab" href="#menu1">Professional Experience</a></li>
+      <li><a data-toggle="tab" href="#Prof_Tab">Professional Experience</a></li>
       <li><a data-toggle="tab" href="#menu2">Projects</a></li>
       <li><a data-toggle="tab" href="#menu3">Additional Assignment Requirements</a></li>
     </ul>
-      <div class="tab-content">
-        <div id="home" class="tab-pane active">
-          <p>
-            Senior at Worcester Polytechnic Institute // Class of 2020 // BS in Computer Science // Minor in Data Science // Passion for Cybersecurity and Data Visualization
+    <div class="tab-content">
+<!--
+Code for pane 1 (home)
+About Me
+-->
+    <div id="home" class="tab-pane active">
+      <p>
+        <table style="width:100%; border: 0px">
+          <tr>
+                <th style="border: 0px !important"><img src="Images/selfie.jpg" alt="Sam Coache" align="center" width="275" height="275"></th>
+                <th style="border: 0px !important">
+                  <h3>Bio</h3>
+                  <p class="rescue">
+                    I'm passionate about Cybersecurity and Data Visualization. I want to combine the two and create new ways to visualize attack vectors and vulnerabilities and develop
+                    new tools from the results of these visualizations. Creating a new way to present security data to bridge the technical gap between professional cybersecurity
+                    analysts and the clients they are presenting this information to can increase communication and understanding for either party.
+                  </p>
+                  <h3>Education</h3>
+                  <p class="rescue">
+                    <u>Worcester Polytechnic Institute (WPI), Worcester, Massachusetts</u>
+                    <br>Graduation date May ‘19
+                    <br>Bachelor of Science in Computer Science with a Minor in Data Science, Class of 2019
+                  </p>
+                  <h3>Connect</h3>
+                  <a style="font-size:90%;" href="https://www.linkedin.com/in/samuel-coache-b699b4114/">LinkedIn Account</a>
+                  <br>
+                  <a style="font-size:90%;" href="https://github.com/sccoache">GitHub Account</a>
+                </th>
+              </tr>
+            </table>
           </p>
         </div>
-        <div id="menu1" class="tab-pane">
+<!--
+Code for pane 2 (Prof_Tab)
+Professional Experience
+-->
+        <div id="Prof_Tab" class="tab-pane" style="padding-left: 10px; padding-right: 10px; padding-bottom: 40px">
           <p>
             <h3>Technology Skills</h3>
             <b>Programming:</b> C/C++, Python, D3, Scala, JavaScript, CSS, HTML, Java, SQL, and Lisp
@@ -47,6 +62,21 @@ tr:nth-child(even) {
             <b>Applications:</b> Metasploit Framework, Wireshark, Kali Linux, Amazon Web Services and AWS S3 Rest API, Microsoft Office, Linux, Git, Bitbucket, and JDBC API
             <br>
             <b>Skills:</b> Internal/External/Web Application Vulnerability Assessments, Network Security Assessments, Social Engineering, Security Audits, Control Audits, and the Agile System Development Life Cycle (SDLC)
+          </p>
+          <p>
+            <h3>Work</h3>
+            <u><b>Cybersecurity Risk Analyst Intern,</b> Crowe Horwath LLP (May 2018 - August 2018)</u>
+            <br>Engaged in full scope pen testing in a client facing work environment. This included technical documentation and reporting, as well as presentation of these findings to the client. <br>
+            <div>
+              <ul>
+                <li>Internal and External Penetration Assessment</li>
+                <li>Web Application Vulnerability Assessment</li>
+                <li>Social Engineering Campaigns</li>
+                <li>Network Security Assessment</li>
+                <li>Networking Control Review</li>
+              </ul>
+            <u><b>Senior Assistant,</b> WPI (August 2018 - May 2019)</u>
+            <br>Senior Assistant for the Computer Science Department at Worcester Polytechnic Institute. Responsible for running lab sections for classes, grading assignments and other classwork, as well as hosting open <br> office hours for the undergratuate students at WPI. Currently assigned to 1102 Advanced Introduction to Program Design.
           </p>
           <p>
             <h3>Courses</h3>
@@ -64,34 +94,26 @@ tr:nth-child(even) {
               <li>Webware</li>
             </ul>
           </p>
-          <p>
-            <h3>Work</h3>
-            <u><b>Cybersecurity Risk Analyst Intern,</b> Crowe Horwath LLP (May 2018 - August 2018)</u>
-            <br>Engaged in full scope pen testing in a client facing work environment. This included technical documentation and reporting, as well as presentation of these findings to the client. <br>
-            <div>
-              <ul>
-                <li>Internal and External Penetration Assessment</li>
-                <li>Web Application Vulnerability Assessment</li>
-                <li>Social Engineering Campaigns</li>
-                <li>Network Security Assessment</li>
-                <li>Netorking Control Review</li>
-              </ul>
-            <u><b>Senior Assistant,</b> WPI (August 2018 - May 2019)</u>
-            <br>Senior Assistant for the Computer Science Department at Worcester Polytechnic Institute. Responsible for running lab sections for classes, grading assignments and other classwork, as well as hosting open <br> office hours for the undergratuate students at WPI. Currently assigned to 1102 Advanced Introduction to Program Design.
-          </p>
           </div>
         </div>
-        <div id="menu2" class="tab-pane">
+<!--
+Code for pane 3 (menu2)
+Projects
+-->
+        <div id="menu2" class="tab-pane" style="padding-left: 10px !important; padding-right: 10px !important">
           <h3><u>Worldwide Happiness Visualization</u></h3>
-          <p>For this project we created a webpage that allows people to interact and see why some countries are happier than others. To complete this task we started collecting readily available country specific metrics
-            <br>that we believed could cause a certain country’s inhabitants to be relatively more or less happy. The data that we gathered was the reported average reported happiness by country, total population, Gross Domestic Product (GDP),
-            <br>inflation, unemployment, and alcohol consumption, all of this data was gathered from the year 2008 to 2016. We wanted to present this data in a way that would allow people to engage, and explore the information on their own.
-            <br>Take a moment to check out the project for yourself by clicking below, for more information about the methodology and view the source code check out my GitHub repository.
+          <p>For this project we created a webpage that allows people to interact and see why some countries are happier than others. To complete this task we started collecting readily available country specific metrics that we believed could cause a certain country’s inhabitants to be relatively more or less happy. The data that we gathered was the reported average reported happiness by country, total population, Gross Domestic Product (GDP), inflation, unemployment, and alcohol consumption, all of this data was gathered from the year 2008 to 2016. We wanted to present this data in a way that would allow people to engage, and explore the information on their own.
           </p>
+          Take a moment to check out the project for yourself by clicking below, for more information about the methodology and view the source code check out my GitHub repository.
+          <br>
             <a href="https://sccoache.github.io/Worldwide_Happiness_Visualization/">Click Here to view the Project</a>
-            <br>
+          <br>
             <a href="https://github.com/sccoache/Worldwide_Happiness_Visualization">Click Here to view the GitHub Repository</a>
         </div>
+<!--
+Code for pane 4 (menu3)
+Web Application Programming Experience
+-->
         <div id="menu3" class="tab-pane">
           <div class="container">
             <h3>Web Application Programming Experience</h3>
