--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html lang="en">
-  <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script src="ethereumInfo.js"></script>
   <head>
     <link rel="stylesheet" href="style.css">
