--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
 
     <h2>Experience</h2>
     <p>
-      I have had two coops in bioinformatics related fields, both of which utilized Python and 
+      I have had two coops in bioinformatics related fields, both of which utilized Python and
       command line inputs.
+      I have also had experience using MariaDB and MySQL DBMS.
       
       The following is my experience with several technologies and methods:
     </p>
