think I fixed it to by hidden at first

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       an internship, and I climbed my first 14'er while I was there. I wanted to die. I am the pancake master.
     </p>
     <button onClick="showVid()" type="button">Wanna see something cool?</button>
-    <div id="vidDiv">
+    <div id="vidDiv" style="display:none;">
       <video width="320" height="240" controls>
         <source src="breaking bricks_Trim.mp4" type="video/mp4">
         Your browser does not support the video tag.
