--- a/index.html
+++ b/index.html
@@ -5,16 +5,18 @@
     <link rel="stylesheet" type="text/css" href="bootstrap.css">
   </head>
   <body>
-    <div class="container" style="background-color:lightgreen;">
-      <h1 style="text-align:center;">All about Madeline Burke</h1>
+    <div class="jumbotron">
+      <h1 style="text-align: center">All About Madeline Burke</h1>
     </div>
     <br>
     <div class="container">
         <div class="row">
-            <div class="col">
-                <img src="prof.jpg" class="img-rounded" style=width:150px;height:225px;>
+            <div class="col-sm-4">
+                <div class="text-center">
+                <img src="prof.jpg" class="img-rounded" style="width:300px;height:300px;">
+                </div>
             </div>
-            <div class="col">
+            <div class="col-sm-4">
                 Hi, my name is Madeline Burke and I am a Senior at Worcester Polytechnic Institute (WPI). I am majoring in Computer Science and minoring in Data Science and Business.
             </div>
         </div>
@@ -25,10 +27,10 @@
         <h2>Experience at WPI</h2>
       <ul>
         <li><b>CS1101:</b> Intro to Program Design</li>
-        <li>CS2022: Descrete Mathematics</li>
-        <li>CS2102: Object-Oriented Design</li>
-        <li>CS2223: Algorithms</li>
-        <li>CS2303: Systems Programming</li>
+        <li><b>CS2022:</b> Descrete Mathematics</li>
+        <li><b>CS2102:</b> Object-Oriented Design</li>
+        <li><b>CS2223:</b> Algorithms</li>
+        <li><b>CS2302:</b> Systems Programming</li>
         <li>CS2011: Machine Organization &amp; Assembly</li>
         <li>CS3041: Human-Computer Interaction</li>
         <li>CS3043: Social Implications of Information Processing</li>
@@ -46,10 +48,10 @@
         <h2>Real-World Experience</h2>
         </div>
         <div class="row">
-            <div class="col">
+            <div class="col-xs-4">
                 DNB
             </div>
-            <div class="col">
+            <div class="col-xs-4">
                 LMI
             </div>
         </div>
@@ -59,14 +61,27 @@
       <div class="row">
         <h2>Skill Set</h2>
           <div class="row">
-            <div class="col">
+            <div class="col-xs-4">
                 Much skill
+                <ul>
+                    <li>Java</li>
+                    <li>Python</li>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                </ul>
               </div>
-            <div class="col">
+            <div class="col-xs-4">
               some skill
+                <ul>
+                    <li>JavaScript</li>
+                    <li>unit testing</li>
+                </ul>
               </div>
-            <div class="col">
+            <div class="col-xs-4">
               no skill
+                <ul>
+                    <li>Ruby</li>
+                </ul>
               </div>
           </div>
         </div>
