Moved other repo into this fork

--- a/index.html
+++ b/index.html
@@ -2,17 +2,18 @@
   <head>
     <title>CS4241 Assignment 1</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="fancify.css">
   </head>
   <body>
-    <h1>Information about [Your name here]</h1>
+    <h1>Information about Jacob Kaplan</h1>
     <p>
-      [Self introduction]
+      I'm a Senior at WPI, class of 2019
     </p>
     <p>
-      [Major and other information]
+      Computer Science Major, Mathematics Minor
     </p>
     <p>
-      [Other things]
+      I have taken Intro to AI, Algorithms, Databases 1, Foundations of CS, and the introductory courses.
     </p>
 
     <h2>Experience</h2>
@@ -20,8 +21,22 @@
       Working experience
     </p>
     <ul>
-      <li>IBM/Rational</li>
-      <li>WPI</li>
+      <li>Internship with Cognex in Natick MA, where I learned web development.</li>
+      <li>Internship with HOVER in San Francisco CA, where I worked with CV/AR research, and how HOVER could apply it.</li>
+      <li>WPI MQP, beginning to work with the FDA to mine text to explore drug interactions from user stories.</li>
+    </ul>
+    <p>
+      Technologies and Methods
+    </p>
+    <ul>
+
+<li>HTML:  A lot</li>
+<li>CSS:  A lot</li>
+<li>Java:   A lot</li>
+<li>JavaScript:   A lot</li>
+<li>Ruby:   None</li>
+<li>Python:   A lot</li>
+<li>unit testing:   Some</li>
     </ul>
   </body>
 </html>
